--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/cli": "^4.1.11",
+    "aos": "^2.3.4",
     "notyf": "^3.10.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
