--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
      "dev:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch",
-    "dev:server": "http-server . -p 3001 --silent",
+    "dev:server": "http-server . -p 3001 --silent --watch",
     "dev": "concurrently --kill-others-on-fail \"npm run dev:css\" \"npm run dev:server\" --prefix-colors \"blue.bold,green.bold\" --name \"CSS,SERVER\" --hide-prefix-colors"
 },
   "devDependencies": {
